# serve

backend/eager/: Benchmark_BERT_model_optimize_for_inference.py  CMakeLists.txt  Export_BERT.py  Export_BERT_extern_transformers.py  Export_BERT_model_only.py  README  bert_tokenizer.cpp  bert_tokenizer.h  create_model_cutom_op.py  handler.cpp  handler.h  handler.py  handler_deploy.cpp  main.cpp  optimize_for_inference_benchmark.cpp  requirements.txt  run_model_cutom_op.py  run_model_ts_costumn_op.py  sample_text_mrpc_2.txt  sample_text_mrpc_3.txt  so_disect.cpp  test_tokenizer.cpp  threading_benchmark.cpp
backend/eager/handler/: __init__.py
backend/eager/modified_files/tokenizers/implementations/: base_tokenizer.py
backend/eager/modified_files/transformers/: __init__.py  dependency_versions_check.py  file_utils.py
backend/eager/modified_files/transformers/data/: data_collator.py
backend/eager/modified_files/transformers/models/auto/: __init__.py  tokenization_auto.py
backend/eager/modified_files/transformers/models/bert/: __init__.py
backend/eager/modified_files/transformers/onnx/: convert.py
benchmarks/: benchmark-ab_cpp_backend.py
docker/: build_image.sh
examples/Huggingface_Transformers/: README.md
examples/image_segmenter/u2net/: model_factory.py  object_segmentation_handler.py
examples/torchrec_dlrm/: dlrm_factory.py
frontend/server/src/main/java/org/pytorch/serve/http/api/rest/: InferenceRequestHandler.java
frontend/server/src/main/java/org/pytorch/serve/wlm/: WorkerThread.java
kubernetes/kfserving/: Huggingface_readme.md
requirements/: torch_cu102_linux.txt  torch_cu113_linux.txt  torch_darwin.txt  torch_linux.txt
test/: README.md
test/pytest/: test_example_torchrec_dlrm.py  test_example_u2net.py
ts/protocol/: otf_message_handler.py
